--- a/app/src/main/res/layout/activity_customer_registration.xml
+++ b/app/src/main/res/layout/activity_customer_registration.xml
@@ -6,89 +6,99 @@
     android:layout_height="match_parent"
     tools:context=".customer_registration">
 
-
-    <EditText
-        android:id="@+id/etname"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="25dp"
-        android:layout_below="@+id/imgcustomer_registration"
-        android:ems="10"
-        android:hint="Enter Your Name"
-        android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="-16dp"
-        tools:layout_editor_absoluteY="250dp" />
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/imgcustomer_registration"
+                android:layout_width="407dp"
+                android:layout_height="163dp"
+                android:src="@drawable/signup3"
+                android:layout_marginTop="25dp"
+                tools:layout_editor_absoluteX="4dp" />
+
+            <EditText
+                android:id="@+id/etname"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="25dp"
+                android:layout_below="@+id/imgcustomer_registration"
+                android:ems="10"
+                android:hint="Enter Your Name"
+                android:inputType="textPersonName"
+                tools:layout_editor_absoluteX="-16dp"
+                tools:layout_editor_absoluteY="250dp" />
 
 
-    <EditText
-        android:id="@+id/etusername"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="25dp"
-        android:layout_below="@+id/etname"
-        android:hint="Enter Your Username"
-        tools:layout_editor_absoluteX="-16dp"
-        tools:layout_editor_absoluteY="190dp" />
+            <EditText
+                android:id="@+id/etusername"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="25dp"
+                android:layout_below="@+id/etname"
+                android:hint="Enter Your Username"
+                tools:layout_editor_absoluteX="-16dp"
+                tools:layout_editor_absoluteY="190dp" />
 
 
-    <EditText
-        android:id="@+id/etemail"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="25dp"
-        android:layout_below="@+id/etusername"
-        android:ems="10"
-        android:hint="Enter Your Email"
-        android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="-16dp"
-        tools:layout_editor_absoluteY="308dp" />
+            <EditText
+                android:id="@+id/etemail"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="25dp"
+                android:layout_below="@+id/etusername"
+                android:ems="10"
+                android:hint="Enter Your Email"
+                android:inputType="textEmailAddress"
+                tools:layout_editor_absoluteX="-16dp"
+                tools:layout_editor_absoluteY="308dp" />
 
 
-    <EditText
-        android:id="@+id/etpassword"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="25dp"
-        android:layout_below="@+id/etemail"
-        android:ems="10"
-        android:hint="Enter Your Password"
-        android:inputType="textPassword"
-        tools:layout_editor_absoluteX="-34dp"
-        tools:layout_editor_absoluteY="371dp" />
+            <EditText
+                android:id="@+id/etpassword"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="25dp"
+                android:layout_below="@+id/etemail"
+                android:ems="10"
+                android:hint="Enter Your Password"
+                android:inputType="textPassword"
+                tools:layout_editor_absoluteX="-34dp"
+                tools:layout_editor_absoluteY="371dp" />
 
 
-    <EditText
-        android:id="@+id/etphone"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="25dp"
-        android:layout_below="@+id/etpassword"
-        android:ems="10"
-        android:hint="Enter Your Phone No"
-        android:inputType="phone"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="431dp" />
+            <EditText
+                android:id="@+id/etphone"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="25dp"
+                android:layout_below="@+id/etpassword"
+                android:ems="10"
+                android:hint="Enter Your Phone No"
+                android:inputType="phone"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="431dp" />
 
-    <ImageView
-        android:id="@+id/imgcustomer_registration"
-        android:layout_width="407dp"
-        android:layout_height="163dp"
-        android:src="@drawable/signup3"
-        tools:layout_editor_absoluteX="4dp" />
+            <Button
+                android:id="@+id/bsignup"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="35dp"
+                android:layout_below="@+id/etphone"
+                android:background="@color/airforceblue"
+                android:text="     Signup"
+                android:textColor="@color/amber"
+                android:textSize="35dp"
+                tools:layout_editor_absoluteX="-16dp"
+                tools:layout_editor_absoluteY="518dp" />
 
-    <Button
-        android:id="@+id/bsignup"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="35dp"
-        android:layout_below="@+id/etphone"
-        android:background="@color/airforceblue"
-        android:text="     Signup"
-        android:textColor="@color/amber"
-        android:textSize="35dp"
-        tools:layout_editor_absoluteX="-16dp"
-        tools:layout_editor_absoluteY="518dp" />
+        </RelativeLayout>
 
-
+    </ScrollView>
 
 </RelativeLayout>
