--- a/app/src/main/res/layout/activity_admin_verify.xml
+++ b/app/src/main/res/layout/activity_admin_verify.xml
@@ -6,6 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".admin_verify">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:id="@+id/tv_num"
+        android:layout_below="@+id/btn_verify_admin"
+        android:layout_marginTop="25dp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:id="@+id/tv_na"
+        android:layout_below="@+id/tv_num"
+        android:layout_marginTop="25dp" />
 
     <EditText
         android:id="@+id/et_otp"
@@ -49,7 +62,5 @@
         android:textSize="20dp"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="472dp" />
-
-
 
 </RelativeLayout>
