--- a/app/src/main/res/layout/activity_worker_all_display.xml
+++ b/app/src/main/res/layout/activity_worker_all_display.xml
@@ -1,14 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".worker_all_display">
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/wad_tv"
+        android:id="@+id/wad_lv">
+
+    </ListView>
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="exists"/>
+        android:layout_height="65dp"
+        android:id="@+id/wad_tv"
+        android:layout_marginTop="25dp"
+        android:text="sdv"
+        android:layout_below="@+id/wad_tv_name"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:id="@+id/wad_tv_name"
+        android:layout_marginTop="25dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+</RelativeLayout>
