--- a/app/src/main/res/layout/activity_customer_options.xml
+++ b/app/src/main/res/layout/activity_customer_options.xml
@@ -1,44 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".customer_options">
 
-    <ScrollView
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="65dp"
+        android:id="@+id/tv_cust_name"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:layout_marginTop="25dp"
+        android:layout_alignParentTop="true"/>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:id="@+id/co_btn_new"
+        android:layout_below="@+id/tv_cust_name"
+        android:layout_marginTop="25dp"
+        android:text="Set a new appointment."/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:id="@+id/tv_cust_name"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:layout_marginTop="25dp"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:id="@+id/co_btn_pending"
+        android:text="View unconfirmed/pending appointments."
+        android:layout_below="@+id/co_btn_new"
+        android:layout_marginTop="25dp"/>
 
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_height="500dp"
-                android:layout_marginTop="25dp"
-                android:id="@+id/lv_services_display"
-                android:layout_below="@+id/tv_cust_name"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:id="@+id/co_btn_confirmed"
+        android:text="View confirmed appointments."
+        android:layout_below="@+id/co_btn_pending"
+        android:layout_marginTop="25dp"/>
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:layout_marginTop="25dp"
-                android:id="@+id/btn_customer_logout"
-                android:text="LOGOUT"
-                android:layout_below="@+id/lv_services_display"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_marginTop="25dp"
+        android:id="@+id/btn_customer_logout"
+        android:text="LOGOUT"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="25dp"/>
 
-        </RelativeLayout>
-
-    </ScrollView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
