--- a/app/src/main/res/layout/customer_confirm.xml
+++ b/app/src/main/res/layout/customer_confirm.xml
@@ -5,13 +5,18 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:id="@+id/all_tv_work"
+        android:layout_height="30dp"
+        android:id="@+id/cc_tv_work"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="25dp"
-        android:id="@+id/all_tv_date"/>
+        android:id="@+id/cc_tv_wname"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:id="@+id/cc_tv_date"/>
 
 </LinearLayout>
