--- a/app/src/main/res/layout/activity_worker_registration.xml
+++ b/app/src/main/res/layout/activity_worker_registration.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".worker_registration">
+    tools:context=".worker_registration"
+    android:background="@color/darkpurple">
 
     <ScrollView
         android:layout_width="match_parent"
