--- a/app/src/main/res/layout/activity_customer_confirm_appointment.xml
+++ b/app/src/main/res/layout/activity_customer_confirm_appointment.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".customer_confirm_appointment">
+    tools:context=".customer_confirm_appointment"
+    android:background="@color/darkpurple">
 
     <ListView
         android:layout_width="match_parent"
