--- a/app/src/main/res/layout/activity_customer_options.xml
+++ b/app/src/main/res/layout/activity_customer_options.xml
@@ -4,47 +4,80 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".customer_options">
+    tools:context=".customer_options"
+    android:background="@color/darkpurple">
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:id="@+id/tv_cust_name"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:layout_marginTop="25dp"
-        android:layout_alignParentTop="true"/>
+        android:layout_height="match_parent">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:id="@+id/co_btn_new"
-        android:layout_below="@+id/tv_cust_name"
-        android:layout_marginTop="25dp"
-        android:text="Set a new appointment."/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:id="@+id/co_btn_pending"
-        android:text="View unconfirmed/pending appointments."
-        android:layout_below="@+id/co_btn_new"
-        android:layout_marginTop="25dp"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:id="@+id/imgcustomer_option"
+                android:src="@drawable/customer_op"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="25dp"/>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:id="@+id/co_btn_confirmed"
-        android:text="View confirmed appointments."
-        android:layout_below="@+id/co_btn_pending"
-        android:layout_marginTop="25dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:id="@+id/tv_cust_name"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:layout_marginTop="10dp"
+                android:layout_below="@+id/imgcustomer_option"/>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:layout_marginTop="25dp"
-        android:id="@+id/btn_customer_logout"
-        android:text="LOGOUT"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="25dp"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:textSize="20dp"
+                android:background="@color/airforceblue"
+                android:textColor="@color/amber"
+                android:id="@+id/co_btn_new"
+                android:layout_below="@+id/tv_cust_name"
+                android:layout_marginTop="25dp"
+                android:text="Set a new appointment."/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:textSize="20dp"
+                android:background="@color/airforceblue"
+                android:textColor="@color/amber"
+                android:id="@+id/co_btn_pending"
+                android:text="View unconfirmed/pending appointments."
+                android:layout_below="@+id/co_btn_new"
+                android:layout_marginTop="25dp"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:textSize="20dp"
+                android:background="@color/airforceblue"
+                android:textColor="@color/amber"
+                android:id="@+id/co_btn_confirmed"
+                android:text="View confirmed appointments."
+                android:layout_below="@+id/co_btn_pending"
+                android:layout_marginTop="25dp"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:layout_marginTop="25dp"
+                android:background="@color/airforceblue"
+                android:textSize="20dp"
+                android:textColor="@color/amber"
+                android:id="@+id/btn_customer_logout"
+                android:text="LOGOUT"
+                android:layout_below="@+id/co_btn_confirmed"
+                android:layout_marginBottom="25dp" />
+
+        </RelativeLayout>
+
+    </ScrollView>
 
 </RelativeLayout>
