--- a/app/src/main/res/layout/activity_salary.xml
+++ b/app/src/main/res/layout/activity_salary.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".salary">
+    tools:context=".salary"
+    android:background="@color/darkpurple">
 
     <TextView
         android:layout_width="match_parent"
@@ -27,6 +28,9 @@
         android:id="@+id/btn_accept"
         android:layout_width="match_parent"
         android:layout_height="65dp"
+        android:background="@color/airforceblue"
+        android:textColor="@color/amber"
+        android:textSize="20dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="25dp"
         android:text="Accept and continue."/>
