--- a/app/src/main/res/layout/activity_worker_display.xml
+++ b/app/src/main/res/layout/activity_worker_display.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".worker_display">
+    tools:context=".worker_display"
+    android:background="@color/darkpurple">
 
     <ListView
         android:layout_width="match_parent"
