--- a/app/src/main/res/layout/activity_worker_login.xml
+++ b/app/src/main/res/layout/activity_worker_login.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".worker_login">
+    tools:context=".worker_login"
+    android:background="@color/darkpurple">
 
 
 
