--- a/app/src/main/res/layout/activity_salary.xml
+++ b/app/src/main/res/layout/activity_salary.xml
@@ -10,11 +10,17 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="65dp"
+        android:layout_below="@id/imgterm"
         android:id="@+id/s_tv"
         android:text="Salary offered :-"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:layout_marginTop="25dp"/>
-
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:id="@+id/imgterm"
+        android:src="@drawable/worker_accept"
+        android:layout_marginTop="25dp"/>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,7 +28,7 @@
         android:layout_above="@+id/btn_accept"
         android:layout_below="@+id/s_tv"
         android:layout_marginBottom="25dp"
-        android:layout_marginTop="25dp"/>
+        android:layout_marginTop="15dp"/>
 
     <Button
         android:id="@+id/btn_accept"
