--- a/app/src/main/res/layout/activity_customer_confirm_appointment.xml
+++ b/app/src/main/res/layout/activity_customer_confirm_appointment.xml
@@ -6,16 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".customer_confirm_appointment"
     android:background="@color/darkpurple">
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:id="@+id/imgcust_thank"
         android:src="@drawable/customer_thanks"
         android:layout_marginTop="25dp"/>
+
+    <Spinner
+        android:id="@+id/cca_s"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@+id/imgcust_thank"
+        android:layout_marginTop="25dp"
+        android:entries="@array/confirmed" />
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/imgcust_thank"
+        android:layout_below="@+id/cca_s"
         android:id="@+id/cca_lv"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="25dp"/>
