--- a/app/src/main/res/layout/activity_customer_pending_appointment.xml
+++ b/app/src/main/res/layout/activity_customer_pending_appointment.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<LinearLayout
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/darkpurple">
 
@@ -9,14 +11,19 @@
         android:layout_height="200dp"
         android:id="@+id/imgcust_wait"
         android:src="@drawable/cust_waiting"
-        android:layout_marginTop="25dp"/>
+        android:layout_marginTop="25dp" />
+
+    <Spinner
+        android:id="@+id/cpa_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="25dp"
+        android:entries="@array/pending" />
 
     <ListView
+        android:id="@+id/cpa_lv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/imgcust_wait"
-        android:id="@+id/cpa_lv"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="25dp"/>
+        android:background="@color/blue" />
 
-</RelativeLayout>
+</LinearLayout>
